# tyla

./: ACKNOWLEDGMENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix
examples/: sample.tex  sample.typ
src/: lib.rs
src/core/latex2typst/: context.rs  environment.rs  markup.rs  mod.rs  template.rs
src/core/latex2typst/engine/: mod.rs
src/core/typst2latex/: markup.rs  math_ir.rs  mod.rs  preprocess.rs  template.rs  utils.rs
src/core/typst2latex/engine/: eval.rs  mod.rs  value.rs  vfs.rs
src/core/typst2latex/table/: generator.rs
src/features/: bibtex.rs  refs.rs  templates.rs  tikz.rs
src/utils/: diagnostics.rs  error.rs  files.rs  mod.rs
tests/: cli.rs
tests/corpus/: .gitignore  README.md  fetch.sh  run.sh
tests/corpus/samples/: cs-paper.tex  refs.bib
