[package]
name = "tyla"
version = "0.3.6"
edition = "2021"
description = "tyla - High-performance bidirectional LaTeX ↔ Typst converter"
license = "Apache-2.0"
repository = "https://github.com/scipenai/tylax"
readme = "README.md"
keywords = ["latex", "typst", "converter", "math"]
categories = ["text-processing", "command-line-utilities"]

[lib]
name = "tyla"
crate-type = ["rlib"]

[[bin]]
name = "tyla"
path = "src/bin/tyla.rs"

[dependencies]
# LaTeX parsing (mitex)
mitex = "0.2"
mitex-parser = "0.2"
mitex-spec = "0.2"
mitex-spec-gen = "0.2"

# Typst parsing
typst-syntax = "0.14"

# Core utilities
clap = { version = "4.4", features = ["derive"], optional = true }
fxhash = "0.2"
lazy_static = "1.4"
phf = { version = "0.11", features = ["macros"] }
regex = "1.10"
rowan = "0.15"
chrono = "0.4"
indexmap = "2.2"

# Data loading (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
csv = { version = "1.3", optional = true }
toml = { version = "0.8", optional = true }

# Used by `tyla::batch`
globset = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["cli"]
cli = ["dep:clap"]
data-loading = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "dep:csv", "dep:toml"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
